[tool.poetry]
name = "repl_pygame_beta_formula1hackcadestarwar"
version = "0.1.0"
description = ""
authors = ["ahmadsalahuddee <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
